<resources>
    <string name="app_name">푸름</string>
    <string name="home_today">TODAY</string>
    <string name="home_date">%d년 %d월 %d일</string>
    <string name="home_daily_usage_time">일일 사용시간</string>
    <string name="home_hour">시간</string>
    <string name="home_minute">분</string>
    <string name="home_goal_time_label">휴대폰\n사용 목표 시간</string>
    <string name="home_goal_time">%d시간</string>
    <string name="home_screen_count_label">휴대폰\n화면 켠 횟수</string>
    <string name="home_screen_count">%d회</string>
    <string name="home_yesterday_rank">어제의 순위</string>
    <string name="home_total_rank">전체 순위</string>
    <string name="home_more"><u>더보기</u></string>
    <string name="home_rank_profile_image">Default Profile Image</string>
    <string name="home_dialog_title">휴대폰 사용 목표시간</string>
    <string name="home_dialog_body">평소의 휴대폰 사용시간을 기준으로\n목표 사용시간을 설정하세요.</string>
    <string name="home_dialog_exit_button">다이얼로그 종료 버튼</string>
    <string name="home_dialog_decrease_button">감소 버튼</string>
    <string name="home_dialog_hour">시간/일</string>
    <string name="home_dialog_increase_button">증가 버튼</string>
    <string name="home_dialog_next_button">설정하기</string>
    <string name="home_calendar_date">%s %d</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="home_goal_time_temp">10시간</string>
    <string name="ranking_left_button">왼쪽</string>
    <string name="ranking_right_button">오른쪽</string>
    <string name="ranking_date">%d년 %d월 %d일</string>
    <string name="ranking_my_rank">MY 순위</string>
    <string name="ranking_total_rank">전체 순위</string>
    <string name="ranking_type_univ"><u>%s</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboard_first">오늘의 키워드로 매일 한 문장 작성하기</string>
    <string name="ddingdong">띵동!</string>
    <string name="onboard_keywords">오늘의 키워드가 도착했습니다</string>
    <string name="onboard_next">다음</string>
    <string name="onboard_badge">귀여운 배지를 획득해볼까요?</string>
    <string name="onboard_sec">퀘스트 클리어하고 배지 획득하기</string>
    <string name="onboard_third">작성한 문장으로 대결 신청하기</string>
    <string name="onboard_challenge">도전장을 내밀어보아요</string>
    <string name="onboard_glove">작성한 문장으로 대결 신청하기</string>
    <string name="login_simple">간편하게 로그인하기</string>
    <string name="signup_agree">이용 약관에 동의해주세요</string>
    <string name="signup_all_agree">모두 동의합니다</string>
    <string name="agree_service"><u>서비스 이용 약관 동의</u></string>
    <string name="agree_my_info"><u>개인정보 수집 및 이용 동의</u></string>
    <string name="signup_next">계속 진행합니다</string>
    <string name="pureum_clause">푸름 이용 약관</string>
    <string name="clause">이용 약관</string>
    <string name="clause_ok">확인</string>
    <string name="signup_welcome">환영합니다!</string>
    <string name="signup_setting">나를 나타내는 프로필 사진과\n닉네임을 설정해주세요.</string>
    <string name="change_profile_img">사진 변경하기</string>
    <string name="enter_nickname">닉네임을 입력해주세요. (최대 10자)</string>
    <string name="signup_follow">다음</string>
    <string name="clause_long">여러분은 본 약관을 읽고 동의하신 후 회원 가입을 신청하실 수 있으며, 네이버는 이에 대한 승낙을 통해 회원 가입 절차를 완료하고 여러분께 네이버 서비스 이용 계정(이하 ‘계정’)을 부여합니다. 계정이란 회원이 네이버 서비스에 로그인한 이후 이용하는 각종 서비스 이용 이력을 회원 별로 관리하기 위해 설정한 회원 식별 단위를 말합니다.
    회원은 자신의 계정을 통해 좀더 다양한 네이버 서비스를 보다 편리하게 이용할 수 있습니다. 이와 관련한 상세한 내용은 계정 운영정책 및 고객센터 내 네이버 회원가입 방법 등에서 확인해 주세요.
    네이버는 단체에 속한 여러 구성원들이 공동의 계정으로 네이버 서비스를 함께 이용할 수 있도록 단체회원 계정도 부여하고 있습니다. 단체회원 구성원들은 하나의 계정 및 아이디(ID)를 공유하되 각자 개별적으로 설정한 비밀번호를 입력하여 계정에 로그인하고 각종 서비스를 이용하게 됩니다. 단체회원은 관리자와 멤버로 구성되며, 관리자는 구성원 전부로부터 권한을 위임 받아 단체회원을 대표하고 단체회원 계정을 운용합니다. 따라서 관리자는 단체회원 계정을 통해 별도 약관 또는 기존 약관 개정에 대해 동의하거나 단체회원에서 탈퇴할 수 있고, 멤버들의 단체회원 계정 로그인 방법 및 이를 통한 게시물 게재 등 네이버 서비스 이용을 관리(게시물 삭제 포함)할 수 있습니다. 본 약관에서 규정한 사항은 원칙적으로 구성원 모두에게 적용되며, 각각의 구성원은 다른 구성원들의 단체회원 계정 및 아이디(ID)를 통한 서비스 이용에 관해 연대책임을 부담합니다.
    단체회원 계정 사용에서의 관리자, 멤버 등의 권한 및 (공동)책임에 관한 사항 등은 계정 운영정책 및 고객센터 내 네이버 단체회원(단체 아이디) 소개 등에서 확인해 주시기 바랍니다.</string>
    <string name="signup_last">거의 다 왔어요!</string>
    <string name="check_grade">몇 학년이신가요? 학년을 선택해주세요.</string>
    <string name="grade_hint">학년을 선택해주세요.</string>
    <string name="signup_end">완료</string>
    <string name="access_right">앱 접근 권한 안내</string>
    <string name="use_access">푸름은 앱 이용 시\n다음 권한을 사용하고 있습니다.</string>
    <string name="use_camera">카메라/사진\n프로필 설정 시 촬영 및 이미지 업로드</string>
    <string name="hello_text">반가워요 %s 님!</string>
    <string name="no_ignore">잊기 전에 출석체크를 해주세요</string>
    <string name="check_ok">출석체크가 완료되었습니다</string>
    <string name="check_no">클릭해서 출석체크 하기</string>
    <string name="check_number">누적 출석체크 횟수: %d회</string>
    <string name="today_keyword">오늘의 키워드로 문장을 작성해요</string>
    <string name="click_keyword">클릭 시 오늘의 키워드로 이동</string>
    <string name="my_badge">MY 배지</string>
    <string name="my_sentence">MY 문장</string>
    <string name="my_challenge">MY 도전</string>
    <string name="get_badge_name">배지명</string>
    <string name="check_get_badge">열심히 획득한 배지를\n확인하러 가볼까요?</string>
    <string name="latest_get_badge">최근 획득 배지</string>
    <string name="today_keyword_one">오늘의 키워드 1</string>
    <string name="today_keyword_two">오늘의 키워드 2</string>
    <string name="today_keyword_three">오늘의 키워드 3</string>
    <string name="void_sentence">작성된 문장이 없습니다.\n가장 먼저 문장을 작성해볼까요?</string>
    <string name="void_sentence_button">문장 작성하러 가기</string>
    <string name="sentence_public">공개</string>
    <string name="sentence_private">비공개</string>
    <string name="keyword_definition">정의</string>
    <string name="keyword_definition_sentence">어떤 내용을 구체적인 사실로\n나타내게 하다</string>
    <string name="keyword_sentence_hint">키워드를 보고 떠오르는 생각을 자유롭게\n문장으로 표현해주세요!</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_back_end">작성을 종료하시겠습니까?</string>
    <string name="dialog_back_msg">나가기를 누르면\n작성 중인 글이 사라집니다.</string>
    <string name="dialog_back_continue">계속 쓰기</string>
    <string name="dialog_back_back">나가기</string>
    <string name="dialog_sentence_completion">문장 작성 완료</string>
    <string name="dialog_keyword">키워드</string>
    <string name="dialog_private_public">공개 여부</string>
    <string name="dialog_go_my_sentence">내가 쓴 문장 보러 가기</string>
    <string name="dialog_go_other_sentence">다른 사람이 쓴 문장 보러 가기</string>
    <string name="dialog_sentence_blame">신고하시겠습니까?</string>
    <string name="dialog_sentence_blame_cancel">신고를 취소하시겠습니까?</string>
    <string name="blame_sentence">신고하기</string>
    <string name="cancel_blame_sentence">신고 취소하기</string>
    <string name="battle_with_friends">친구들과 대결을 해볼까요?</string>
    <string name="battle_start">대결 신청하기</string>
    <string name="battle_background">battle_background</string>
    <string name="battle_status">대결 현황</string>
    <string name="battle_my_battle_label">MY 대결</string>
    <string name="battle_my_battle_body">나의 대결 현황을\n알아봐요.</string>
    <string name="battle_button">보러가기</string>
    <string name="battle_all_battle_label">전체 대결</string>
    <string name="battle_all_battle_body">진행 중인 대결\n문장들을 보러가요.</string>
    <string name="battle_waiting_label">대기 중인 대결</string>
    <string name="battle_more"><u>전체 보기</u> ></string>
    <string name="text_letter_challenge">리사이클러뷰를 구현했습니다.</string>
    <string name="battle_item_period_label">대결 기간</string>
    <string name="battle_item_period">%d일</string>
    <string name="battle_fragment_indicator">BattleFragmentIndicator</string>
    <string name="battle_1">1</string>
    <string name="battle_2">2</string>
    <string name="battle_3">3</string>
    <string name="battle_4">4</string>
    <string name="battle_keyword_label">대결 키워드 선택</string>
    <string name="battle_keyword_body">상대와 대결해보고 싶은 키워드를 선택해주세요!</string>
    <string name="battle_keyword_1">대결할 키워드 1</string>
    <string name="battle_keyword_2">대결할 키워드 2</string>
    <string name="battle_keyword_3">대결할 키워드 3</string>
    <string name="battle_sentence_label">대결 문장 작성</string>
    <string name="battle_sentence_body">키워드를 사용하여 대결할 문장을 작성해주세요!</string>
    <string name="battle_definition_label">정의</string>
    <string name="battle_sentence_hint">키워드를 보고 떠오르는 생각을 자유롭게\n문장으로 표현해주세요!</string>
    <string name="battle_sentence_button">작성 완료</string>
    <string name="keyword_battle">키워드</string>
    <string name="my_battle_win">이(가) 이겼어요!</string>
    <string name="battle_opponent_label">대결 상대 선택</string>
    <string name="battle_opponent_body">대결할 상대를 선택해주세요!</string>
    <string name="battle_opponent_button">선택 완료</string>
    <string name="battle_sentence_clear"><u>다시 작성하기</u></string>
    <string name="battle_final_label">대결장 작성</string>
    <string name="battle_final_body">작성한 문장을 확인하고,\n목표 좋아요 수를 설정해주세요!</string>
    <string name="bg_battle_final">bg_battle_final</string>
    <string name="me">me</string>
    <string name="battle_vs">VS</string>
    <string name="battle_final_sentence_label">작성한 문장</string>
    <string name="battle_final_opponent_default_sentence">작성 대기 중</string>
    <string name="battle_final_period_label">대결 기간 설정하기</string>
    <string name="battle_period_day">일</string>
    <string name="battle_final_next_button">대결을 신청합니다!</string>
    <string name="battle_final_period_body">상대와 대결을 진행할 기간을 설정해주세요.\n기간 내에 많은 좋아요를 받은 친구가 승리합니다.</string>
    <string name="battle_final_period_tip">대결 신청 완료 시 문장 수정이 불가능합니다.</string>
    <string name="battle_my_battle_like_many">대결 기간 내 더 많은 좋아요를 받은 친구가 승리합니다.</string>
    <string name="battle_more_cool_sentence">더 멋진 문장에 마음을 남겨보세요!</string>
    <string name="battle_my_cancellation">대결 취소하기</string>
    <string name="battle_request_dialog_title">대결 신청 완료</string>
    <string name="battle_request_keyword_label">키워드</string>
    <string name="battle_request_period_label">대결 기간</string>
    <string name="battle_request_period">%d일</string>
    <string name="battle_request_my_battle_button">내 대결 보러가기</string>
    <string name="battle_request_exit_button">나가기</string>
    <string name="battle_other_sentence">상대가 작성한 문장</string>
    <string name="battle_my_sentence">내가 작성한 문장</string>
    <string name="battle_the_end">이미 종료된 대결입니다.</string>
    <string name="battle_sentence_completed">작성 완료</string>
    <string name="battle_cannot_modified">작성 완료시 문장 수정이 불가합니다.</string>
    <string name="battle_start_text">대결이 시작되었습니다!</string>
    <string name="battle_go_my_battle">내 대결 보러가기</string>
    <string name="battle_exit">나가기</string>
    <string name="battle_go_writing_sentence">문장 작성하러 하기</string>
    <string name="battle_waiting_writing">작성 대기 중</string>
    <string name="account_info">계정 정보</string>
    <string name="profile_setting">프로필 설정</string>
    <string name="logout">로그아웃</string>
    <string name="membership_withdrawal">회원탈퇴</string>
    <string name="set_nickname">닉네임</string>
    <string name="edit_nickname">닉네임 입력 (최대 10자)</string>
    <string name="set_ok">완료</string>
    <string name="present_nickname">현재 닉네임: 르미</string>
    <string name="my_text">MY</string>
    <string name="my_sentence_list">%d 문장 작성/ %d 문장 공개</string>
    <string name="sentence_delete">문장을 삭제하시겠습니까?</string>
    <string name="dialog_no">아니오</string>
    <string name="dialog_yes">네</string>
    <string name="menu_modify">수정</string>
    <string name="menu_delete">삭제</string>
    <string name="inquiry">문의하기</string>
    <string name="badge_name_1">1번 배지</string>
    <string name="badge_name_2">2번 배지</string>
    <string name="badge_name_3">3번 배지</string>
    <string name="badge_name_4">4번 배지</string>
    <string name="badge_name_5">5번 배지</string>
    <string name="badge_name_6">6번 배지</string>
    <string name="badge_name_7">7번 배지</string>
    <string name="badge_name_8">8번 배지</string>
    <string name="badge_name_9">9번 배지</string>
    <string name="badge_info_default">배지 설명</string>
    <string name="badge_dialog_button">획득 배지 보러 가기</string>
    <string name="badge_dialog_achieve">획득!</string>
</resources>