<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="296dp"
        android:layout_height="374dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_dialog_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/dialog_back_end"
            android:textSize="16sp"
            android:textColor="@color/text1"
            android:fontFamily="@font/nanum_square_neo_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:gravity="center_horizontal"
            android:text="@string/dialog_back_msg"
            android:textSize="16sp"
            android:textColor="@color/text1"/>
        
        <Button
            android:id="@+id/dialog_continue_bt"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_dialog"
            android:text="@string/dialog_back_continue"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_back_bt"
            android:layout_width="240dp"
            android:layout_height="42dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_dialog_lg"
            android:backgroundTint="@null"
            android:text="@string/dialog_back_back"
            android:textColor="@color/text1"/>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>