<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="560dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_rectangle_20dp"
            android:elevation="4dp"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/home_calender_week_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:text="@string/sun"
                    android:fontFamily="@font/nanum_square_neo_bold"
                    android:textSize="16sp"
                    android:textColor="@color/calender_red"
                    android:gravity="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:text="@string/mon"
                    android:fontFamily="@font/nanum_square_neo_bold"
                    android:textSize="16sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:text="@string/tue"
                    android:fontFamily="@font/nanum_square_neo_bold"
                    android:textSize="16sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:text="@string/wed"
                    android:fontFamily="@font/nanum_square_neo_bold"
                    android:textSize="16sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:text="@string/thu"
                    android:fontFamily="@font/nanum_square_neo_bold"
                    android:textSize="16sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:text="@string/fri"
                    android:fontFamily="@font/nanum_square_neo_bold"
                    android:textSize="16sp"
                    android:gravity="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:text="@string/sat"
                    android:fontFamily="@font/nanum_square_neo_bold"
                    android:textSize="16sp"
                    android:textColor="@color/calender_blue"
                    android:gravity="center"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>