<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="hour"
            type="java.lang.Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_dialog_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="720dp">

        <ImageButton
            android:id="@+id/home_dialog_exit_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_cancel"
            android:contentDescription="@string/home_dialog_exit_button" />

        <TextView
            android:id="@+id/home_dialog_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/home_dialog_title"
            android:fontFamily="@font/nanum_square_neo_bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/home_dialog_body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/home_dialog_title_text"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/home_dialog_body"
            android:fontFamily="@font/nanum_square_neo_regular"
            android:textSize="16sp"
            android:textAlignment="center"
            android:lineSpacingExtra="13sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/home_dialog_body_text"
            app:layout_constraintBottom_toTopOf="@+id/home_dialog_next_button"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/home_dialog_decrease_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/selector_decrease_button"
                android:backgroundTint="@null"
                android:contentDescription="@string/home_dialog_decrease_button" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@{Integer.toString(hour), default=7}"
                    android:fontFamily="@font/nanum_square_neo_bold"
                    android:textSize="40sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_dialog_hour"
                    android:fontFamily="@font/nanum_square_neo_bold"
                    android:textSize="22sp"/>
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/home_dialog_increase_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/selector_increase_button"
                android:backgroundTint="@null"
                android:contentDescription="@string/home_dialog_increase_button" />
        </LinearLayout>

        <Button
            android:id="@+id/home_dialog_next_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/bg_button_large"
            android:text="@string/home_dialog_next_button"
            android:fontFamily="@font/nanum_square_neo_regular"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>